# jupyternotebooks

./: Untitled.ipynb  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
colab_notes/: CropAndWeedDetection.ipynb
cultural-evolution/: Chapter-5.ipynb  chap5-tree-diagram-example.dio  social-choice-theory.ipynb
cultural-evolution/.ipynb_checkpoints/: Chapter-5-checkpoint.ipynb  chap5-tree-diagram-example-checkpoint.dio
social-choice-theory/: introduction.aux  introduction.dvi  introduction.html  introduction.org  introduction.out  introduction.tex  introduction.toc  社会的選択理論-第4章.ipynb
social-choice-theory/.ipynb_checkpoints/: 社会的選択理論-第4章-checkpoint.ipynb
