[tool.poetry]
name = "jupyternotebooks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.4.0"
numpy = "^1.23.1"
jupyter = "^1.0.0"
jupyterlab = "^3.4.4"
jupyterlab-drawio = "^0.9.0"
matplotlib = "^3.6.2"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
